
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-12-28 DP  1.8.0  Retain the clipboard contents on app exit.
2006-12-28 DP  1.8.0  Add an option to show NULLs as <NULL> in the Query Tool.
2006-12-28 DP  1.8.0  Remember last used save definition filename.
2006-12-28 DP  1.8.0  Remember last used backup/restore filenames.
2006-12-28 DP  1.8.0  Refactor code to remove support for building the Query
                      Tool with a listview rather than a grid.
2006-12-28 DP  1.6.2  Avoid displaying multi line data in single line list 
                      controls, per Clodoaldo Pinto Neto
2006-12-15 DP  1.6.2  Properly drop foreign keys in schemas whose names require
                      quoting, per M S.
2006-12-14 DP  1.6.2  Avoid a crash when closing the query tool on Solaris
                      [Dhanaraj M]
2006-12-07 DP  1.6.2  Display the transation start time on the server status
                      windows on PostgreSQL 8.3+
2006-12-07 DP  1.6.2  Reverse engineer columns with multi-word names (like
                      'timestamp with timezone') correctly so that precision
                      and array modifiers are included properly. Per Erwin.
2006-12-07 DP  1.6.2  Add '...' to truncated column comments in table SQL, per
                      Erwin Brandstetter.
2006-12-05 DP  1.6.2  Properly size the backup dialog, per Patrick Headley.
2006-12-05 DP  1.6.2  Ensure column headers and the insert row are shown in the
                      edit grid when no rows exist in the table being editted,
                      per Bob Pawley.
2006-12-05 DP  1.6.2  Restore dialog sizes correctly.
2006-12-04 DP  1.8.0  Refactor code to remove database base classes